--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
   },
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "babel-core": "~6.7.*",
+    "babel-loader": "~6.2.*",
+    "babel-preset-es2015": "~6.6.*",
+    "babel-preset-react": "~6.5.*",
+    "webpack": "~1.12.*",
+    "webpack-dev-server": "~1.14.*"
+  },
   "dependencies": {
-    "babel-core": "^6.9.1",
-    "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-polyfill": "^6.7.4",
     "flux": "^2.1.1",
-    "react": "0.14.8",
+    "react": "^15.0.0",
     "react-autosuggest-legacy": "^2.2.6",
-    "react-dom": "0.14.8",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1",
-    "whatwg-fetch": "^1.0.0"
+    "react-dom": "^15.0.0",
+    "whatwg-fetch": "^0.11.0"
   }
 }
